<resources>
    <string name="app_name">1 Win</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_ha">ha</string>
    <string name="_yoq">yo\'q</string>
    <string name="bosh">bo\'sh</string>
    <string name="xatolik">xatolik</string>
    <string name="kam">yetarli emas</string>
    <string name="netCash">NetCash</string>
    <string name="foydalanuvchibor">bunday foydalanuvchi mavjud</string>
    <string name="b">b</string>
    <string name="id">id</string>
    <string name="user">USer</string>
    <string name="connect">connect</string>
    <string name="hisobim">Hisobim</string>
    <string name="sozlama">Sozlama</string>
    <string name="foydalanuvchi">Foydalanuvchi</string>
    <string name="o_tkazma">O\'tkazma</string>
    <string name="malumot">Malumot</string>
    <string name="chiqish">Chiqish</string>
    <string name="tahrirlash">Tahrirlash</string>
    <string name="saqlash">Saqlash</string>
    <string name="ismi">Ismi</string>
    <string name="familya">Familya</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="netcash_uzs"><![CDATA[NetCash-> UZS]]></string>
    <string name="netcash_usd"><![CDATA[NetCash-> USD]]></string>
    <string name="netcash_rubl"><![CDATA[NetCash-> RUB]]></string>
    <string name="netcash_eur"><![CDATA[NetCash-> EUR]]></string>
    <string name="eslatma1">Diqqat! emailingizga link yuboriladi iltimos
        o`sha link orqali ham parolni almashtiring.</string>
    <string name="eslatma2">Diqqat! O\'tkazmalar 24 soatdan keyin amalga oshiriladi.</string>
    <string name="karta_raqam_xxxx_xxxx_xxxx_xxxx">Karta raqam: xxxx xxxx xxxx xxxx</string>
    <string name="chiqarib_olmoq">Chiqarib olmoq</string>
    <string name="sotib_olmoq">Sotib olmoq</string>
    <string name="diqqat">Diqqat!</string>
    <string name="maosh1">To`plangan haq</string>
    <string name="maosh2">kechagi haq</string>
    <string name="maosh3">1 haftalik haq</string>
    <string name="maosh4">1 oylik haq</string>
    <string name="maosh5">jami maosh</string>
    <string name="promocod">PROMOSOM</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="o_zbekcha">O`zbekcha</string>
    <string name="mablag_kam">mablag` yetarli emas</string>
    <string name="o_tkazmalar">O`tkazmalar</string>
    <string name="eslatma3">acauntingiz o\'chiriladi.</string>
    <string name="umumiy_promocodlar">umumiy promocodlar</string>
    <string name="eslatma">hisobingizdan chiqmoqchimisiz?</string>
    <string name="rasmozgartir">fon rasmini o`zgartirmoqchimisiz</string>
    <string name="malumotlar">malumotlar</string>
    <string name="h_malumotlar">hisob ma\'lumotlarini o\`zgartirmoqchimisiz</string>
    <string name="hisobdan_chiqish">Hisobdan chiqish</string>
    <string name="hisobni_o_chirish">Hisobni o`chirish</string>
    <string name="pochta">pochta</string>
    <string name="parol">parol</string>
    <string name="kirish">Kirish</string>
    <string name="royhatdan_o_tish">Royhatdan o`tish</string>
    <string name="parolni_unutdingizmi">Parolni unutdingizmi?</string>
    <string name="hisob_yaratish">Hisob yaratish</string>
    <string name="link_id_majburiy_emas">link id (majburiy_emas)</string>
    <string name="netcash">NetCash</string>
    <string name="to_liq_ma_lumot_olish_uchun_telegram_gotga_o_ting">To`liq ma\'lumot olish uchun telegram gotga o`ting</string>
    <string name="smile">👇🏽👇🏽👇🏽👇🏽</string>
    <string name="to_plangan_haq">To`plangan haq</string>
    <string name="kechagi_haq">Kechagi haq</string>
    <string name="_30_kunlik_haq">30 Kunlik haq</string>
    <string name="hozzirgi_oy_uchun">Hozzirgi oy uchun</string>
    <string name="jami_haq">Jami haq</string>
    <string name="joriy_parol">Joriy parol</string>
    <string name="yangi_parol">Yangi parol</string>
    <string name="o_zgartirish">O\'zgartirish</string>
    <string name="promocodd">promocod</string>

</resources>