<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="start"
    android:padding="20dp"
    android:id="@+id/navstart"
    android:background="@drawable/drowble"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewmalumot"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewotkazma" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgsozdeuser"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/usericon"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="0dp" />

        <ImageView
            android:id="@+id/imgkunlogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgsozdeuser"
            app:layout_constraintStart_toEndOf="@+id/imgsozdeuser"
            app:srcCompat="@drawable/logonetcash"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtnavnetkash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-black"
            android:gravity="fill_vertical"
            android:text="@string/netcash"
            android:textColor="@color/jigarrang"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgkunlogo"
            app:layout_constraintStart_toEndOf="@+id/imgkunlogo"
            app:layout_constraintTop_toTopOf="@+id/imgkunlogo" />

        <TextView
            android:id="@+id/txtnavid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="fill_vertical"
            android:text="@string/id"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/imgkunlogo"
            app:layout_constraintStart_toStartOf="@+id/imgkunlogo"
            app:layout_constraintTop_toTopOf="@+id/imgsozdeuser"
            app:layout_constraintVertical_bias="0.071" />

        <TextView
            android:id="@+id/txtnavuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="fill_vertical"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:text="@string/user"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/imgkunlogo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imgsozdeuser"
            app:layout_constraintTop_toBottomOf="@+id/imgsozdeuser"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txtnavtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="fill_vertical"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:text="@string/connect"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintEnd_toEndOf="@+id/txtnavuser"
            app:layout_constraintStart_toStartOf="@+id/txtnavuser"
            app:layout_constraintTop_toBottomOf="@+id/txtnavuser"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <View
            android:id="@+id/viewhisob"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtnavtel" />

        <View
            android:id="@+id/viewfoydalan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewhisob" />

        <View
            android:id="@+id/viewsozlama"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewfoydalan" />

        <View
            android:id="@+id/viewotkazma"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewsozlama" />

        <View
            android:id="@+id/viewchiq"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hisobim"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewhisob"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/viewhisob" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foydalanuvchi"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewfoydalan"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/viewfoydalan" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sozlama"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewsozlama"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/viewsozlama" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_tkazma"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewotkazma"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/viewotkazma" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malumot"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewmalumot"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/viewmalumot" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/viewhisob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewhisob"
            app:srcCompat="@drawable/homeicon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/viewfoydalan"
            app:layout_constraintStart_toStartOf="@+id/viewfoydalan"
            app:layout_constraintTop_toTopOf="@+id/viewfoydalan"
            app:srcCompat="@drawable/hisobicon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewsozlama"
            app:srcCompat="@drawable/sozlamaicon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/viewotkazma"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/taransfersicon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:srcCompat="@drawable/malumoticon"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logout"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chiqish"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/viewchiq" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.navigation.NavigationView>